<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Laundry</string>
    <string name="nav_header_subtitle">Laundry.store@Laundry.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title">Name of agency</string>
    <string name="sub_title">497 Evergreen Rd.</string>
    <string-array name="arr_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="notify_successfully_saved">Your information has been saved</string>
    <string name="notify_fail">Something went wrong\nPlease check!</string>
    <string name="notify_lost_connection">Lost the connection\nPlease check!</string>
    <string name="notify_loading">Loading...</string>
    <string name="notify_cant_choose">Not available</string>
    <string name="btn_ok">OK</string>
    <string name="btn_fail">FAIL</string>
    <string name="input_user_name">User name</string>
    <string name="input_your_name">Your name</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_date">dd / mm / yyyy</string>
    <string name="input_location">Your address</string>
    <string name="input_gender">Your gender</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_create">Create a new account?</string>
    <string name="sign_up_have_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="yout_info">Your information</string>
    <string name="login">Login</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_finish">Finish</string>
    <string name="view_bill">View bill</string>
    <string name="service">Service</string>
    <string name="title_service">Name of the service</string>
    <string name="service_sub_title">Short description</string>
    <string name="promotion">Promotion</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="user_profile">User Profile</string>
    <string name="my_order">My order</string>
    <string name="history">History</string>
    <string name="pricing">Pricing</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="input_time_pick_up">Time pick up</string>
    <string name="input_time_draff_off">Time draff off</string>
    <string name="yout_order">Your Order</string>
    <string name="title_category">Category 1</string>
    <string name="category_price">VND 10.000</string>
    <string name="input_material">Material</string>
    <string name="input_production">Label</string>
    <string name="input_unit">Unit*</string>
    <string name="input_note">Note</string>
    <string name="input_color">Color</string>
    <string name="input_number">1</string>
    <string name="notify_choose_more">Please choose more than 0</string>
    <string name="category">All Categories</string>
    <string name="input_location_pickup">Pick up place</string>
    <string name="input_location_dropoff">Drop off place</string>
    <string name="title_your_address">Hi, John Doe</string>
    <string name="TimePickDraff">Schedule</string>
    <string name="date_time_pick_up">Pick up</string>
    <string name="date_time_drop_off">Date delivery</string>
    <string name="input_location_customer">Who takes this order?</string>
    <string name="input_location_contact">Your phone number</string>
    <string name="payment">Payment</string>
    <string name="cash_payment">Money cash</string>
    <string name="title_choose_service">Choose service you want</string>
    <string name="title_choose_payment">Choose payment you want</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="input_promotion">Enter your promotion</string>
    <string name="title_all_your_clothes">All your clothes here</string>
    <string name="title_service_weight">All service - weight</string>
    <string name="confirm">Confirm</string>
    <string name="succefful_order">Your order have been sent</string>
    <string name="thanks">Thank you!!!</string>
    <string name="your_code">Above is your order\'s QR Code</string>
    <string name="checkout">Check out</string>
    <string name="total_items">Your Items </string>
    <string name="total_weight"> Weight </string>
    <string name="add_more">Add more</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_person">Your account</string>
    <string name="title_your_order">Your order</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_order_active">Active</string>
    <string name="tab_order_history">History</string>
    <string name="place_a_order">Place an order</string>
    <string name="try_this_service">Try this</string>
    <string name="read_more">Read more</string>
    <string name="tab_new_service">New service</string>
    <string name="tab_promotion">Promotion</string>
    <string name="see_your_clothes">See your clothes</string>
    <string name="see_your_bag">See your bag</string>
    <string name="add_to_your_bag">Add to your bag</string>
    <string name="add_bag">Add</string>
    <string name="your_address">Choose branch</string>
    <string name="stt_on_going">On going</string>
    <string name="branch_address">Branch address:</string>
    <string name="recievcer">Reciever:</string>
    <string name="choose_time">Choose your schedule</string>
    <string name="enter_note">Enter your note</string>
    <string name="tab_our_service">Our service</string>
    <string name="notification_content">Hailey Hodges commented on Mornong Ride. Aliquam lectus sed, blandit augue. cras ullamcor per bib en dum Cras ullamc orper</string>
    <string name="input_phone_number">Phone</string>
    <string name="input_address">Address</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="about">About us</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_for_continue">Sign in to continue</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="input_email_err">Please enter your email</string>
    <string name="input_password_err">Please enter your password</string>
    <string name="sign_up_for_continue">Create your account</string>
    <string name="input_first_name">First name</string>
    <string name="input_last_name">Last name</string>
    <string name="input_last_name_err">Please enter your last name</string>
    <string name="input_first_name_err">Please enter your first name</string>
    <string name="notify_successfully_create_account">Create successfully!</string>
    <string name="notify_fail_email_exist">This email is existing!</string>
    <string name="login_successfuly">Login successfully</string>
    <string name="email_password_wrong">Your email/password typed wrong</string>
    <string name="use_now">Use now</string>
    <string name="serviceDetail">Detail</string>
    <string name="choose_unit">Choose unit of clohtes</string>
    <string name="choose_unit_desc">Two options for you, just choose one</string>
    <string name="submit">Submit</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'NewLaundry\'.</string>
    <string name="permission_required_toast">Location permission is required for NewLuandry.</string>
    <string name="app_name">Luandry</string>
    <string name="item">Item</string>
    <string name="please_select">Please select</string>
    <string name="Undefine">Undefine</string>
    <string name="choose_unit_of_clothes">Choose unit of clothes</string>
    <string name="kg">Kg</string>
    <string name="weight_null">Weight must not null</string>
    <string name="choose_clothes">Choose clothes</string>
    <string name="detail_clothes">Detail clothes</string>
    <string name="save">SAVE</string>
    <string name="your_bag">Your bag</string>
    <string name="info_order">Information Order</string>
    <string name="please_choose_time_delivery">Please choose TimeDelivery</string>
    <string name="please_choose_time_pickup">Please choose TimePickup</string>
    <string name="please_choose_date_pickup">Please choose DatePickup</string>
    <string name="please_choose_date_delivery">Please choose DateDelivery</string>
    <string name="please_choose_promotion">Please choose Promotion</string>
    <string name="choose_map">Please choose store in map!</string>
    <string name="you_choose">You choose</string>
    <string name="time_pickup_null">Time Pickup have to not null!</string>
    <string name="time_delivery_null">Time Delivery have to not null!</string>
    <string name="time_pickup_2h">Time Pickup before Time Pickup 2 hour</string>
    <string name="date_delivery_pickup">Date Pickup must before Date Delivery</string>
    <string name="order_fail">Create Order fail!</string>
    <string name="validate_unit">Please choose unit</string>
    <string name="total_price">_.000 VND</string>
    <string name="other_service">Service</string>
    <string name="bag_empty">Bag is empty</string>
    <string name="order">ORDER</string>
    <string name="BACK_TO_HOME">BACK TO HOME</string>
    <string name="edit">EDIT</string>
    <string name="Cancel_order">CANCLE ORDER</string>
    <string name="err_not_found_branch">ERR! Branch not found</string>
    <string name="title_receipt">Information Receipt</string>
    <string name="title_bill">Information Bill</string>
    <string name="view_reipt">View Receipt</string>
    <string name="view_orderdetail">View Order</string>
    <string name="order_result">Order creation results</string>
    <string name="Set_up_information">Set up information</string>
    <string name="PENDING">PENDING</string>
    <string name="bill_name">Infomation bill #</string>
    <string name="name_customer">Customer name:</string>
    <string name="phone_number">Phone</string>
    <string name="branch_name">Branch:</string>
    <string name="place_pickup">Place pickup:</string>
    <string name="place_delivery">Place delivery:</string>
    <string name="STT">No</string>
    <string name="Service_type">Service type</string>
    <string name="clothes">Clothes</string>
    <string name="DVT">Unit</string>
    <string name="Unit_price">Unit price</string>
    <string name="KL_SL_R">Q/W received</string>
    <string name="KL_SL_D">Q/W delivery</string>
    <string name="Sum_temp">Temp Total:</string>
</resources>