<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.Fragment.HomeFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/place_an_order"
            android:orientation="vertical">
            <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_our_service"
                    android:id="@+id/tab_new_service"/>
                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_promotion"
                    android:id="@+id/tab_promotion"/>
            </android.support.design.widget.TabLayout>
            <include layout="@layout/home_new_service"></include>
        </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/white"
        android:text="@string/place_a_order"
        android:textSize="@dimen/font_size_text"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"

        android:id="@+id/place_an_order"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.3"
        android:background="@color/colorAccent"/>
</RelativeLayout>